--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "chart.js": "^4.4.8",
     "framer-motion": "^11.2.12",
     "lucide-react": "^0.414.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
