--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.4",
+    "@react-three/fiber": "^9.1.0",
     "chart.js": "^4.4.8",
-    "framer-motion": "^11.2.12",
+    "framer-motion": "^12.4.10",
+    "gsap": "^3.12.7",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.414.0",
-    "react": "^18.2.0",
+    "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-tsparticles": "^2.12.2",
+    "three": "^0.174.0",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@types/node": "^22.13.5",
